--- a/git_test.html
+++ b/git_test.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-    Welcome to my website.
-    My name is Anna.
+    <h1>Welcome to my website.</h1>
+    <h3>My name is Anna.</h3>
 </body>
 <style>
     body{
